--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,6 +9,7 @@ appTitle=Product Inventory Management Dashboard
 appDescription=Product Inventory Management Dashboard
 #XTIT: Main view title
 title=Product Inventory Management Dashboard
+Restock_Needed=Restock Needed
 
 PRODUCT_TABLE_TITLE = Wide range of available products
 COLUMN_PRODUCT = Product
