--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,28 +1,72 @@
-# This is the resource bundle for productinventorymanagement
-
-#Texts for manifest.json
-
-#XTIT: Application name
+# ==========================================================
+# Application Metadata
+# ==========================================================
 appTitle=Product Inventory Management Dashboard
-
-#YDES: Application description
 appDescription=Product Inventory Management Dashboard
-#XTIT: Main view title
 title=Product Inventory Management Dashboard
 Restock_Needed=Restock Needed
 
-PRODUCT_TABLE_TITLE = Wide range of available products
-COLUMN_PRODUCT = Product
-COLUMN_CATEGORY = Category
-COLUMN_PRICE = Price
-COLUMN_STOCK = Stock Qty
-COLUMN_SUPPLIER = Supplier
-COLUMN_LAST_RESTOCKED = Last Restocked
-COLUMN_TOTAL_VALUE = Total Inventory
+# ==========================================================
+# Table Titles and Columns
+# ==========================================================
+PRODUCT_TABLE_TITLE=Wide range of available products
+COLUMN_PRODUCT=Product
+COLUMN_CATEGORY=Category
+COLUMN_PRICE=Price
+COLUMN_STOCK=Stock Qty
+COLUMN_SUPPLIER=Supplier
+COLUMN_LAST_RESTOCKED=Last Restocked
+COLUMN_TOTAL_VALUE=Total Inventory
 
-# P13n / Table Settings
-TABLE_SETTINGS_TITLE = Table Settings
-TABLE_SETTINGS_WARNING = Are you sure?
+# ==========================================================
+# Table Settings
+# ==========================================================
+TABLE_SETTINGS_TITLE=Table Settings
+TABLE_SETTINGS_WARNING=Are you sure?
+SORT_PANEL_TITLE=Sort
+GROUP_PANEL_TITLE=Group
 
-SORT_PANEL_TITLE = Sort
-GROUP_PANEL_TITLE = Group
+# ==========================================================
+# Dialog: Add Product
+# ==========================================================
+ADD_PRODUCT_DIALOG_TITLE=Add New Product
+ADD_PRODUCT_LABEL_NAME=Product Name
+ADD_PRODUCT_LABEL_CATEGORY=Category
+ADD_PRODUCT_LABEL_PRICE=Price
+ADD_PRODUCT_LABEL_STOCK=Stock Quantity
+ADD_PRODUCT_LABEL_SUPPLIER=Supplier
+ADD_PRODUCT_LABEL_LAST_RESTOCKED=Last Restocked
+ADD_PRODUCT_PLACEHOLDER_NAME=Enter product name
+ADD_PRODUCT_PLACEHOLDER_CATEGORY=Enter category
+ADD_PRODUCT_PLACEHOLDER_PRICE=Enter price
+ADD_PRODUCT_PLACEHOLDER_STOCK=Enter stock
+ADD_PRODUCT_PLACEHOLDER_SUPPLIER=Enter supplier
+ADD_PRODUCT_PLACEHOLDER_DATE=Select date
+ADD_PRODUCT_BUTTON_ADD=Add
+ADD_PRODUCT_BUTTON_CANCEL=Cancel
+
+# ==========================================================
+# Dialog: Re-Stock
+# ==========================================================
+RESTOCK_DIALOG_TITLE=Update Stock
+RESTOCK_COLUMN_PRODUCT=Product
+RESTOCK_COLUMN_CURRENT_PRICE=Current Price
+RESTOCK_COLUMN_NEW_PRICE=New Price
+RESTOCK_COLUMN_CURRENT_STOCK=Stock Quantity
+RESTOCK_COLUMN_NEW_STOCK=New Stock Quantity
+RESTOCK_COLUMN_SUPPLIER=Supplier
+RESTOCK_COLUMN_DATE=Re-Stocked Date
+RESTOCK_BUTTON_SAVE=Save
+RESTOCK_BUTTON_CANCEL=Cancel
+
+# ==========================================================
+# Dialog: Bulk Price Update
+# ==========================================================
+BULK_PRICE_DIALOG_TITLE=Bulk Price Update
+BULK_PRICE_LABEL_APPLY_PERCENT=Apply same % to all selected products (optional)
+BULK_PRICE_COLUMN_PRODUCT=Product
+BULK_PRICE_COLUMN_CURRENT_PRICE=Current Price
+BULK_PRICE_COLUMN_PERCENT=Increase %
+BULK_PRICE_COLUMN_NEW_PRICE=New Price
+BULK_PRICE_BUTTON_SAVE=Save
+BULK_PRICE_BUTTON_CANCEL=Cancel
