--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -70,3 +70,12 @@ BULK_PRICE_COLUMN_PERCENT=Increase %
 BULK_PRICE_COLUMN_NEW_PRICE=New Price
 BULK_PRICE_BUTTON_SAVE=Save
 BULK_PRICE_BUTTON_CANCEL=Cancel
+
+BTN_ADD_PRODUCT=Add New Product
+BTN_RESTOCK_SELECTED=Restock Selected
+BTN_DELETE_SELECTED=Delete Selected
+BTN_UPDATE_PRICE=Update Price
+BTN_TOOLTIP_REFRESH=Refresh Product Table
+BTN_TOOLTIP_EXPORT=Export to Excel
+BTN_TOOLTIP_SETTINGS=Table Personalization Settings
+
